--- a/.env
+++ b/.env
@@ -5,5 +5,4 @@ DB_PASSWORD= Grupot.Mysql
 DB_NAME=impactaproyecto
 PORT=5173
 
-DATABASE_URL='mysql://h3oivscwcuv336no737g:pscale_pw_vHXZRmWWMPpHxB9v7q1ziLot8p3MHR87U54q2v8oDpq@aws.connect.psdb.cloud/devthecirculartech?ssl={"rejectUnauthorized":true}'
-
+DATABASE_URL='mysql://b6pg6m21b1zi1go6p9bk:pscale_pw_fNdIjARBVCmJ3AnORgixQvXaQ4ao6Ox31GLTj0O7Xk7@aws.connect.psdb.cloud/devthecirculartech?ssl={"rejectUnauthorized":true}'
