wip calendar changes

--- a/.env
+++ b/.env
@@ -4,5 +4,4 @@ DB_USER= rut
 DB_PASSWORD= Grupot.Mysql
 DB_NAME=impactaproyecto
 PORT=5173
-
-DATABASE_URL='mysql://b6pg6m21b1zi1go6p9bk:pscale_pw_fNdIjARBVCmJ3AnORgixQvXaQ4ao6Ox31GLTj0O7Xk7@aws.connect.psdb.cloud/devthecirculartech?ssl={"rejectUnauthorized":true}'
+DATABASE_URL='mysql://6vagf5d6jnk7owvyvlq8:pscale_pw_8bh2ypEfs78e0vryXpwdeTNIaKmxFrGub4Fsfu6mH5P@aws.connect.psdb.cloud/devthecirculartech?ssl={"rejectUnauthorized":true}'
