se agrega request para resumen de materialidades

--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ DB_USER= rut
 DB_PASSWORD= Grupot.Mysql
 DB_NAME=impactaproyecto
 PORT=5173
-DATABASE_URL='mysql://6vagf5d6jnk7owvyvlq8:pscale_pw_8bh2ypEfs78e0vryXpwdeTNIaKmxFrGub4Fsfu6mH5P@aws.connect.psdb.cloud/devthecirculartech?ssl={"rejectUnauthorized":true}'
+DATABASE_URL='mysql://30k0ud18vi3zgkreyoqb:pscale_pw_kSeejZ7igIY9bIzHHJk2iPXKPgi271II6LvWFuBG2OE@aws.connect.psdb.cloud/devthecirculartech?ssl={"rejectUnauthorized":true}'
