--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ DB_USER= rut
 DB_PASSWORD= Grupot.Mysql
 DB_NAME=impactaproyecto
 PORT=5173
-DATABASE_URL='mysql://42fiyure5lht23wug4ak:pscale_pw_zritHQYB0Uj2ujeifihhQnBiT6QTFJm0oFoXZO07LQ8@aws.connect.psdb.cloud/devthecirculartech?ssl={"rejectUnauthorized":true}'
+DATABASE_URL='mysql://qx0ox8acgoumc7mccdbs:pscale_pw_iriTFeZqUAWMbLuWZDEcxEoqPN5RtxSVrcmpSt9N6Pg@aws.connect.psdb.cloud/devthecirculartech?ssl={"rejectUnauthorized":true}'
