--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ DB_USER= rut
 DB_PASSWORD= Grupot.Mysql
 DB_NAME=impactaproyecto
 PORT=5173
-DATABASE_URL='mysql://qx0ox8acgoumc7mccdbs:pscale_pw_iriTFeZqUAWMbLuWZDEcxEoqPN5RtxSVrcmpSt9N6Pg@aws.connect.psdb.cloud/devthecirculartech?ssl={"rejectUnauthorized":true}'
+DATABASE_URL='mysql://9xlvr095bjnrahdomuk2:pscale_pw_mnn8KGDmNGu4ULGNl3Wk0IwTt6E8x7pCfgm2Z0mgC3j@aws.connect.psdb.cloud/devthecirculartech?ssl={"rejectUnauthorized":true}'
