--- a/.env
+++ b/.env
@@ -4,5 +4,5 @@ DB_USER= rut
 DB_PASSWORD= Grupot.Mysql
 DB_NAME=impactaproyecto
 PORT=5173
-DATABASE_URL='mysql://y0t2njrueq8o1vo1j0r0:pscale_pw_dK0uyIdVlJVSPqJA6LGGk5jqwIuynoNTaD0oeHbMNtc@aws.connect.psdb.cloud/devthecirculartech?ssl={"rejectUnauthorized":true}'
+DATABASE_URL='mysql://uszrph50kx66eili2aq4:pscale_pw_ojtcy7o4UgLtxnuFaBamv1mTAyhCbDpDoaO8iKaWKNY@aws.connect.psdb.cloud/devthecirculartech?ssl={"rejectUnauthorized":true}'
 
