--- a/.env
+++ b/.env
@@ -4,5 +4,4 @@ DB_USER= rut
 DB_PASSWORD= Grupot.Mysql
 DB_NAME=impactaproyecto
 PORT=5173
-DATABASE_URL='mysql://uszrph50kx66eili2aq4:pscale_pw_ojtcy7o4UgLtxnuFaBamv1mTAyhCbDpDoaO8iKaWKNY@aws.connect.psdb.cloud/devthecirculartech?ssl={"rejectUnauthorized":true}'
-
+DATABASE_URL='mysql://uwwc19rz5gs0fk60w7gb:pscale_pw_TRz2J4lHviddoJsMtOoTUlt2IDutHMkHcAFf28iShr7@aws.connect.psdb.cloud/devthecirculartech?ssl={"rejectUnauthorized":true}'
