--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ DB_USER= rut
 DB_PASSWORD= Grupot.Mysql
 DB_NAME=impactaproyecto
 PORT=5173
-DATABASE_URL='mysql://7k9m3unrh1lg5wirb6kd:pscale_pw_QYU0wSC5jUL75LwBJZi0FMIx0RsBu2XvpkBX8t97XCF@aws.connect.psdb.cloud/devthecirculartech?ssl={"rejectUnauthorized":true}'
+DATABASE_URL='mysql://vgo0hymbjl7r0lgwtnll:pscale_pw_qt7Qdx2JJE39vCytIj2ohlF9LeeJ1nlYd2CPIxGXGa6@aws.connect.psdb.cloud/devthecirculartech?ssl={"rejectUnauthorized":true}'
