--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ DB_USER= rut
 DB_PASSWORD= Grupot.Mysql
 DB_NAME=impactaproyecto
 PORT=5173
-DATABASE_URL='mysql://vgo0hymbjl7r0lgwtnll:pscale_pw_qt7Qdx2JJE39vCytIj2ohlF9LeeJ1nlYd2CPIxGXGa6@aws.connect.psdb.cloud/devthecirculartech?ssl={"rejectUnauthorized":true}'
+DATABASE_URL='mysql://uyo7vjyocbunnyy9ji7o:pscale_pw_cUCgjq27IOa31ZAEztyeMVLY1qAN1WfhxDyUO0Gc929@aws.connect.psdb.cloud/devthecirculartech?ssl={"rejectUnauthorized":true}'
