--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ DB_USER= rut
 DB_PASSWORD= Grupot.Mysql
 DB_NAME=impactaproyecto
 PORT=5173
-DATABASE_URL='mysql://2127fusjw2qm0virkfih:pscale_pw_g1AIB8DmpwX9t74mJzRlRP2sXRh3G97q9oDDIKvAGi5@aws.connect.psdb.cloud/devthecirculartech?ssl={"rejectUnauthorized":true}'
+DATABASE_URL='mysql://tludgiyi4mk6n9ryz6jx:pscale_pw_84PXYL6qjXLKTgfiGrVoXh8lxZSQW0BUsRV5lJmzcn4@aws.connect.psdb.cloud/devthecirculartech?ssl={"rejectUnauthorized":true}'
